# machine-setup

./: .gitconfig  .vimrc  README.md  base.yml  install_everything.sh  pyproject.toml  requirements.yaml  setup  setup_dotfiles.sh  setup_no-ip.sh  setup_scrips.sh  setup_ssh.sh  workstation_setup.sh
dotfiles/: config.fish  fish_prompt.fish  gitconfig  init.vim  tmux.conf  vimrc  vscode-settings.json
dotfiles/ulauncher/: extensions.json  settings.json  shortcuts.json
fedora/: install_everything.sh  workstation_setup.sh
scripts/: start_vm  stop_vm_save
tasks/: after-base.yml  base-silverblue.yml  base-ubuntu.yml  dotfiles.yml  pip.yml  workstation.yml
ubuntu/: workstation_setup.sh
ubuntu/install/: setup_xrdp.sh
workstation/: install_everything.sh  setup_dotfiles.sh
