[tool.poetry]
name = "machine-setup"
version = "0.1.0"
description = ""
authors = ["João Marques <joao.marques@tecnativa.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
